# libre-asi-core

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
data/: asi_forms.json  question_categories.json  questions-es-co.json
libre-asi-domain/: Cargo.toml
libre-asi-domain/src/: lib.rs  models.rs  repositories.rs
libre-asi-domain/src/models/: answer.rs  asi_form.rs  interview.rs  option.rs  question.rs
libre-asi-domain/src/repositories/: question.rs
libre-asi-domain/src/tests/: asi_form_tests.rs
libre-asi-infrastructure/: Cargo.toml
libre-asi-infrastructure/src/: sqlite.rs
libre-asi-infrastructure/src/sqlite/: connection.rs  question.rs  schema.rs
libre-asi-services/: Cargo.toml
libre-asi-services/src/: interview.rs  lib.rs
libre-asi-services/src/interview/: interview_tests.rs
